--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!--font style-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,500;1,100&family=Suwannaphum:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!--font style-->
+
+    <title>Movie & Drama Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
